Added Board Schema.
