# swagger.json
@@ -16,18 +16,8 @@
                     "required": true,
                     "content": {
                         "application/json": {
-                            "type": "object",
-                            "properties": {
-                                "board": {
-                                    "type": "array",
-                                    "items": {
-                                        "type": "integer",
-                                        "minimum": 0,
-                                        "maximum": 9,
-                                        "minItems": 1,
-                                        "maxItems": 81
-                                    }
-                                }
+                            "schema": {
+                                "$ref": "#/components/schemas/BoardSchema"
                             }
                         }
                     }
@@ -52,16 +42,20 @@
     "openapi": "3.0.2",
     "components": {
         "schemas": {
+            "BoardSchema": {
+                "type": "object",
+                "properties": {}
+            },
             "BoardFlagsSchema": {
                 "type": "object",
                 "properties": {
-                    "isComplete": {
+                    "isValid": {
                         "type": "boolean"
                     },
                     "isEmpty": {
                         "type": "boolean"
                     },
-                    "isValid": {
+                    "isComplete": {
                         "type": "boolean"
                     }
                 }
